switch to postgres because sqlite requires gcc

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,17 @@
+# sample env. Or you can copy this file to .env and use it right away :)
 # these envs are required for the app to run
 PORT=8080
 LOG_LEVEL=INFO
 LOGIN_DURATION_IN_SECOND=86400
 MAX_REQUEST_BODY_SIZE=10000000 # 10MB
+DATABASE_DRIVER=postgres
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/library?sslmode=disable
 MINIO_ENDPOINT=localhost:9000
+# these are for docker-compose
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=library
+POSTGRES_HOST=database
 MINIO_ROOT_USER=minioadmin
 MINIO_ROOT_PASSWORD=minioadmin
 MINIO_BUCKET=public
