--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,24 @@
 version: "3"
 services:
+  app:
+    build: .
+    ports:
+      - "8080:8080"
+    environment:
+      - "PORT=8080"
+      - "LOG_LEVEL=INFO"
+      - "LOGIN_DURATION_IN_SECOND=86400"
+      - "MAX_REQUEST_BODY_SIZE=10000000"
+      - "DATABASE_DRIVER=postgres"
+      - "DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@database:5432/${POSTGRES_DB}?sslmode=disable"
+      - "MINIO_ENDPOINT=minio:9000"
+      - "MINIO_ACCESS_KEY=${MINIO_ROOT_USER}"
+      - "MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD}"
+      - "MINIO_BUCKET=${MINIO_BUCKET}"
+    depends_on:
+      - miniocreatebuckets
+      - database
+
   database:
     image: postgres:12
     ports:
