a lot of fe work and some modifications in the db

--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,7 @@ PORT=8080
 LOG_LEVEL=INFO
 LOGIN_DURATION_IN_SECOND=86400
 MAX_REQUEST_BODY_SIZE=10000000 # 10MB
+MAX_BOOKS_EACH_USER_CAN_BORROW=3
 DATABASE_DRIVER=postgres
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/library?sslmode=disable
 MINIO_ENDPOINT=localhost:9000
