--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: .
     ports:
       - "8080:8080"
+    volumes:
+      - ./fe:/app/fe
     environment:
       - "PORT=8080"
       - "LOG_LEVEL=INFO"
